force-app/main/default/objects/OCE__ClinicalTrial__c/OCE__ClinicalTrial__c.object-meta.xml
<CustomObject>
    <description>Clinical trial events associated with KOL accounts</description>
    <label>Clinical Trial</label>
    <nameField>
        <displayFormat>CLT-{0000}</displayFormat>
        <label>Clinical Trial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Trials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>