force-app/main/default/objects/OCE__ClinicalTrial__c/fields/Lilly_Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Eligibility_Criteria__c</fullName>
    <label>Eligibility Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>