force-app/main/default/objects/OCE__ClinicalTrial__c/fields/Lilly_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Enrollment__c</fullName>
    <label>Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>