force-app/main/default/objects/OCE__ClinicalTrial__c/fields/Lilly_H1_Clinical_Trail_Id__c.field-meta.xml
<CustomField>
    <fullName>Lilly_H1_Clinical_Trail_Id__c</fullName>
    <externalId>true</externalId>
    <label>H1 Clinical Trail</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>