force-app/main/default/objects/OCE__ClinicalTrial__c/fields/Lilly_Last_Update_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Last_Update_Submitted__c</fullName>
    <label>Last Update Submitted</label>
    <type>Date</type>
</CustomField>