force-app/main/default/objects/OCE__ClinicalTrial__c/fields/Lilly_Official_Title__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Official_Title__c</fullName>
    <label>Official Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>