force-app/main/default/objects/OCE__ClinicalTrial__c/fields/Lilly_Primary_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Primary_Completion_Date__c</fullName>
    <label>Primary Completion Date</label>
    <type>Date</type>
</CustomField>