force-app/main/default/objects/OCE__ClinicalTrial__c/fields/Lilly_Status__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not yet recruiting</fullName>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Active, not recruiting</fullName>
            </value>
            <value>
                <fullName>Recruiting complete, follow-up complete</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Unknown status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>