force-app/main/default/objects/OCE__ClinicalTrial__c/fields/Lilly_Summary__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Summary__c</fullName>
    <label>Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>