force-app/main/default/objects/OCE__ClinicalTrial__c/fields/Lilly_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interventional</fullName>
            </value>
            <value>
                <fullName>Observational</fullName>
            </value>
            <value>
                <fullName>Observational [Patient Registry]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>