force-app/main/default/objects/OCE__ClinicalTrial__c/fields/OCE__Account__c.field-meta.xml
<CustomField>
    <fullName>OCE__Account__c</fullName>
    <description>Parent account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clinical Trials</relationshipLabel>
    <relationshipName>Clinical_Trials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>