force-app/main/default/objects/OCE__ClinicalTrial__c/fields/OCE__ActivityHistoryDateTime__c.field-meta.xml
<CustomField>
    <fullName>OCE__ActivityHistoryDateTime__c</fullName>
    <description>Date for Activity History.</description>
    <label>ActivityHistoryDateTime</label>
    <type>DateTime</type>
</CustomField>