force-app/main/default/objects/OCE__ClinicalTrial__c/fields/OCE__AllSponsors__c.field-meta.xml
<CustomField>
    <fullName>OCE__AllSponsors__c</fullName>
    <description>List of Sponsors.</description>
    <label>All Sponsors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>