force-app/main/default/objects/OCE__ClinicalTrial__c/fields/OCE__AllTherapies__c.field-meta.xml
<CustomField>
    <fullName>OCE__AllTherapies__c</fullName>
    <description>List of Therapies.</description>
    <label>All Therapies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>