force-app/main/default/objects/OCE__ClinicalTrial__c/fields/OCE__EndDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__EndDate__c</fullName>
    <description>End date of the trial</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>