force-app/main/default/objects/OCE__ClinicalTrial__c/fields/OCE__IntegrationId__c.field-meta.xml
<CustomField>
    <fullName>OCE__IntegrationId__c</fullName>
    <description>Integration Id.</description>
    <externalId>true</externalId>
    <label>Integration Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>