force-app/main/default/objects/OCE__ClinicalTrial__c/fields/OCE__OfflineCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineCreatedDate__c</fullName>
    <description>Date and time when this record was created offline</description>
    <inlineHelpText>Date and time when this record was created offline</inlineHelpText>
    <label>Offline Created Date</label>
    <type>DateTime</type>
</CustomField>