force-app/main/default/objects/OCE__ClinicalTrial__c/fields/OCE__OfflineLastModifiedByID__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineLastModifiedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the User who last updated this record offline</description>
    <inlineHelpText>ID of the User who last updated this record offline</inlineHelpText>
    <label>Offline Last Modified By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClinicalTrial2</relationshipName>
    <type>Lookup</type>
</CustomField>