force-app/main/default/objects/OCE__ClinicalTrial__c/fields/OCE__Phase__c.field-meta.xml
<CustomField>
    <fullName>OCE__Phase__c</fullName>
    <description>indicates in which Pahse the trial is</description>
    <label>Phase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Early Phase 1</fullName>
            </value>
            <value>
                <fullName>Phase 1</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Phase 4</fullName>
            </value>
            <value>
                <fullName>Phase 1/Phase</fullName>
            </value>
            <value>
                <fullName>Phase 2/Phase 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>