force-app/main/default/objects/OCE__ClinicalTrial__c/fields/OCE__Progress__c.field-meta.xml
<CustomField>
    <fullName>OCE__Progress__c</fullName>
    <description>If End date less than today, shows Completed. If Started Date less than now shows Starded, else - not started.</description>
    <formula>if (
    NOT(ISNULL(OCE__EndDate__c)) &amp;&amp; OCE__EndDate__c &lt;= NOW(),
    &quot;Completed&quot;,
    if (
        OCE__StartDate__c &lt;= NOW(),
        &quot;Started&quot;,
        &quot;Not Started&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <type>Text</type>
</CustomField>