force-app/main/default/objects/OCE__ClinicalTrial__c/fields/OCE__ProgressDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__ProgressDate__c</fullName>
    <description>If progress completed, shows End Date.If status Started -shows Started Date else - CreatedProgress Date.</description>
    <formula>if (
    OCE__Progress__c = &quot;Completed&quot;,
    OCE__EndDate__c,
    if (
        OCE__Progress__c = &quot;Started&quot;,
        OCE__StartDate__c, 
        CreatedDate
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProgressDate</label>
    <type>DateTime</type>
</CustomField>