force-app/main/default/objects/OCE__ClinicalTrial__c/fields/OCE__StartDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__StartDate__c</fullName>
    <description>Start date of the trial</description>
    <label>Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>