force-app/main/default/objects/OCE__ClinicalTrial__c/fields/OCE__URL__c.field-meta.xml
<CustomField>
    <fullName>OCE__URL__c</fullName>
    <description>Link to the trial website</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>