force-app/main/default/objects/OCE__ClinicalTrial__c/validationRules/OCE__Start_cannot_be_less_then_End_date.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__Start_cannot_be_less_then_End_date</fullName>
    <active>true</active>
    <errorConditionFormula>OCE__StartDate__c &gt; OCE__EndDate__c</errorConditionFormula>
    <errorMessage>Start cannot be less than End date</errorMessage>
</ValidationRule>